--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,13 +8,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_blue: ^0.6.0+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  flutter_blue:
-    path: ../
 
 flutter:
   uses-material-design: true
